--- a/index.html
+++ b/index.html
@@ -19,32 +19,13 @@
             font-weight: bold;
         }
 
-        .pdf-container {
-            width: 100%;
-            height: calc(100vh - 80px);
-            /* изважда височината на хедъра */
-        }
-
-        .pdf-container embed {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
     </style>
 </head>
 
 <body>
 
-    <div class="header">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum.
-    </div>
-
     <div class="pdf-container">
-        <embed src="pandaPoster.pdf" type="application/pdf">
+        <img src="pngPoster.png" alt="Poster" style="width: 100%; height: auto; display: block; margin: 0 auto;">
     </div>
 
 </body>
