--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Постер с текст отгоре</title>
+    <title>СПГ Предприемачи</title>
     <style>
         body {
             margin: 0;
